Preferences dialog can be opened repeatedly using the associated shortcut.
Affected Version
- Version: GNOME nautilus 47.rc
- Distribution: Arch Linux
- Also happens with development version: Yes
Steps to reproduce
- Open nautilus's preferences dialog either via the menu or with the keyboard shortcut.
- Spam
ctrl-,
Expected Behavior
The application would allow only one instance of the dialog.
Actual Behavior
The dialog is spawned many times, and they overlay each other.
Additional Information
Here is a screen recording in which I reproduce the issue.
Screencast_From_2024-09-14_09-46-37
Note that you can also spawn preferences above the about dialog.
Some extra info which may be of use:
Currently installed plugins:
/usr/lib/nautilus/extensions-4/libtotem-properties-page.so
/usr/lib/nautilus/extensions-4/libnautilus-image-properties.so
/usr/lib/nautilus/extensions-4/nautilus-font-manager.so
/usr/lib/nautilus/extensions-4/libterminal-nautilus.so
/usr/lib/nautilus/extensions-4/libnautilus-fileroller.so
For bug testing only, the following command can be used:
NAUTILUS_DISABLE_PLUGINS=TRUE nautilus
Running NAUTILUS_DISABLE_PLUGINS=TRUE nautilus
has no effect on the issue.
Thank you for your time!